kubernetes/prometheus/prometheus-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
